# irradiapy

./: .gitattributes  .gitignore  .readthedocs.yaml  Installing_SRIM_Linux.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  debris_datasets.rst  index.rst  irradiapy.analysis.clusters.rst  irradiapy.analysis.defects.rst  irradiapy.analysis.defectsidentifier.rst  irradiapy.analysis.dpa.rst  irradiapy.analysis.rst  irradiapy.config.rst  irradiapy.damagedb.rst  irradiapy.dtypes.rst  irradiapy.io.bzip2lammpsreader.rst  irradiapy.io.bzip2lammpswriter.rst  irradiapy.io.lammpslogreader.rst  irradiapy.io.lammpsreader.rst  irradiapy.io.lammpsreadermpi.rst  irradiapy.io.lammpswriter.rst  irradiapy.io.lammpswritermpi.rst  irradiapy.io.rst  irradiapy.io.xyzreader.rst  irradiapy.io.xyzwriter.rst  irradiapy.materials.ag.rst  irradiapy.materials.cr.rst  irradiapy.materials.cu.rst  irradiapy.materials.fe.rst  irradiapy.materials.material.rst  irradiapy.materials.o.rst  irradiapy.materials.rst  irradiapy.materials.w.rst  irradiapy.srim.analysis.rst  irradiapy.srim.ofiles.backscat.rst  irradiapy.srim.ofiles.collision.rst  irradiapy.srim.ofiles.e2recoil.rst  irradiapy.srim.ofiles.ioniz.rst  irradiapy.srim.ofiles.lateral.rst  (+22 more)
examples/: debris_analysis.py  lammps_srim_cascades.py  lammps_uttm_cascades.py  spectra.py  srim.py  srimpy.py
irradiapy/: __init__.py  config.py  damagedb.py  database.py  debris_database.py  debris_dataset.py  dpa.py  dtypes.py  enums.py  materials.py  math_utils.py  mpi_utils.py  recoilsdb.py
(+267 files in other folders)
